<resources>
    <string name="app_name">Android Master</string>
    <string name="btnSaludo">App Saludo</string>
    <string name="btnImc">App IMC</string>
    <string name="saludo">Bienvenido</string>
    <string name="appSaludo">Introduce tu nombre</string>
    <string name="btnName">Pulsame</string>
    <string name="imcCalculadora">Calculadora IMC</string>
    <string name="height">Altura</string>
    <string name="peso">Introduce tu peso</string>
    <string name="calcular">Calcular</string>
    <string name="btnSuperHero">App SuperHero</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Tu resultado</string>
    <string name="recalculate">Recalcular</string>
    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estas muy por encima de lo óptimo para tu peso y altura.</string>
    <string name="toDo">Tareas</string>
    <string name="categories">Categorias</string>
    <string name="taks">Tareas</string>
    <string name="task">Añade una tarea</string>
    <string name="rbbusiness">Negocios</string>
    <string name="rbPersonal">Personal</string>
    <string name="rbOther">Otros</string>
    <string name="createTask">Crear tarea</string>
    <string name="shApi">App SuperHero API</string>
    <string name="SUName">Introduce el nombre de un super heroe</string>
    <string name="back">Regresar</string>
</resources>