<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Saludo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saludo"
        android:textSize="36sp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSaludo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSaludo"
        android:layout_marginTop="32dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnImc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnImc"
        android:layout_marginTop="32dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSuperHero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSuperHero"
        android:layout_marginTop="32dp" />


</LinearLayout>